[JTA/JAE] : Renommage de fichiers 2.0
[JTA/JAE] : Factorisation du renommage de fichiers + Mise en place d'une condition pour détection de besoin de renommage